implementando modulo de mantenimiento

--- a/src/app/modules/auth/components/login-page/login-page.component.css
+++ b/src/app/modules/auth/components/login-page/login-page.component.css
@@ -27,3 +27,18 @@ float: right;
     padding: 0.5em 1em;
     border: none;
 }
+
+.logo-container {
+    margin: 0 auto;
+    width: 150px;  
+
+
+}
+
+.Logo {
+    margin: 0 auto;
+    width: 150px;  
+}
+
+
+
