--- a/src/app/modules/auth/components/login-page/login-page.component.html
+++ b/src/app/modules/auth/components/login-page/login-page.component.html
@@ -1,7 +1,13 @@
 
 <form nz-form [formGroup]="validateForm" class="login-form" (ngSubmit)="submitForm()">
+
+    <div nz-row class="logo-container">
+        <div nz-col [nzSpan]="12">
+            <img class="Logo" src="../../../../../assets/Images/Logo.jpg" alt="">
+        </div>
+    </div>
+    <nz-form-item>    
     
-    <nz-form-item>
         <nz-form-control nzErrorTip="Please input your username!">
         <nz-input-group nzPrefixIcon="user">
             <input type="text" nz-input formControlName="identificator" placeholder="Username or email" />
@@ -16,17 +22,17 @@
         </nz-form-control>
     </nz-form-item>
     <div nz-row class="login-form-margin">
-        <div nz-col [nzSpan]="12">
+        <!-- <div nz-col [nzSpan]="12">
         <label nz-checkbox formControlName="remember">
             <span>Remember me</span>
         </label>
-        </div>
+        </div> -->
         <div nz-col [nzSpan]="12">
-        <a class="login-form-forgot">Forgot password</a>
+        <a class="login-form-forgot">Olvide mi contraseña</a>
         </div>
     </div>
     <button [disabled]="validateForm.invalid" nz-button class="login-form-button login-form-margin" [nzType]="'primary'">Log in</button>
     Or
-    <a [routerLink]="['register']">register now!</a>
+    <a [routerLink]="['register']">Registrate ahora!</a>
 </form>
   
