imprementando modulo de mantenimientos

--- a/src/app/modules/menu-layout/components/meters/meters.component.html
+++ b/src/app/modules/menu-layout/components/meters/meters.component.html
@@ -1,1 +1,4 @@
-<app-table></app-table>
+<h1>Medidores Fisicos</h1>
+<app-meters-table [listOfData]="dataList" [titles]="titleList"></app-meters-table>
+<h1>Medidores Virtuales</h1>
+<app-meters-table [listOfData]="dataList" [titles]="titleList"></app-meters-table>
