--- a/src/app/modules/menu-layout/components/meters/meters.component.html
+++ b/src/app/modules/menu-layout/components/meters/meters.component.html
@@ -1,4 +1,4 @@
 <h1>Medidores Fisicos</h1>
-<app-meters-table [listOfData]="dataList" [titles]="titleList"></app-meters-table>
+<app-meters-table [listOfData]="dataList" [filterCodigo]="filterCodigo" [filterModel]="filterModel" [filterSerie]="filterSerie"></app-meters-table>
 <h1>Medidores Virtuales</h1>
-<app-meters-table [listOfData]="dataList" [titles]="titleList"></app-meters-table>
+<app-meters-table ></app-meters-table>
