--- a/src/app/shared/components/meters-table/meters-table.component.css
+++ b/src/app/shared/components/meters-table/meters-table.component.css
@@ -1,3 +1,14 @@
-.i {
-    width: 100%;
-}
+
+.config {
+  margin: 0 auto;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%); 
+  }
+  [nzRight]{
+    margin-left: auto;
+  }
+  [nzLeft]{
+    margin: auto;
+  }
