--- a/src/app/modules/auth/components/login-page/login-page.component.html
+++ b/src/app/modules/auth/components/login-page/login-page.component.html
@@ -10,14 +10,14 @@
     
         <nz-form-control nzErrorTip="Please input your username!">
         <nz-input-group nzPrefixIcon="user">
-            <input type="text" nz-input formControlName="identificator" placeholder="Username or email" />
+            <input nz-input type="text" formControlName="identificator" placeholder="Username or email" nzBorderless />
         </nz-input-group>
         </nz-form-control>
     </nz-form-item>
     <nz-form-item>
         <nz-form-control nzErrorTip="Please input your Password!">
-        <nz-input-group nzPrefixIcon="lock">
-            <input type="password" nz-input formControlName="password" placeholder="Password" />
+        <nz-input-group nzPrefixIcon="lock"  >
+            <input nz-input type="password" formControlName="password" placeholder="Password" nzBorderless />
         </nz-input-group>
         </nz-form-control>
     </nz-form-item>
