--- a/src/app/modules/menu-layout/components/providers/providers.component.html
+++ b/src/app/modules/menu-layout/components/providers/providers.component.html
@@ -1,1 +1,236 @@
-<p>providers works!</p>
+<h1>Proveedores</h1>
+
+<div nz-row class="row-1">
+
+    <div nz-col nzOffset="8" nzSpan="4" class="row1-col1">
+
+        <button nz-button [nzType]="'primary'" (click)="showModal()"><span>Nuevo Proveedor</span></button>
+        <nz-modal [(nzVisible)]="isVisible" nzTitle="The first Modal" (nzOnCancel)="handleCancel()" (nzOnOk)="handleOk()">
+          <ng-container *nzModalContent>
+
+            <div nz-row class="row-1">
+              <div nz-col  [nzSpan]="24" class="row1-col1">
+                  <label>Codigo</label>
+                  <div nz-row>
+                    <nz-form-item>
+                      <nz-form-control>
+                        <input nz-input  class="inputLarge" id="Descripcion" type="text" placeholder=" ZM_#1 " formControlName="descripcion" [disabled]="false" />
+                      </nz-form-control>
+                    </nz-form-item>
+                  </div>
+  
+
+              </div>
+            </div>
+
+            <div nz-row class="row-2">
+              
+              <div nz-col [nzSpan]="24" class="row3-col1">
+
+                  <label>Descripcion</label>
+                  <div nz-row>
+                    <nz-form-item>
+                      <nz-form-control>
+                        <input nz-input  class="inputLarge" id="Descripcion" type="text" placeholder=" Zona ## " formControlName="descripcion" [disabled]="false" />
+                      </nz-form-control>
+                    </nz-form-item>
+                  </div>
+  
+
+              </div>
+
+            </div>
+
+            
+            <div nz-row class="row-1">
+                <div nz-col  [nzSpan]="24" class="row1-col1">
+                    <label>Codigo</label>
+                    <div nz-row>
+                      <nz-form-item>
+                        <nz-form-control>
+                          <input nz-input  class="inputLarge" id="Descripcion" type="text" placeholder=" ZM_#1 " formControlName="descripcion" [disabled]="false" />
+                        </nz-form-control>
+                      </nz-form-item>
+                    </div>
+    
+  
+                </div>
+              </div>
+
+              
+            <div nz-row class="row-1">
+                <div nz-col  [nzSpan]="24" class="row1-col1">
+                    <label>Codigo</label>
+                    <div nz-row>
+                      <nz-form-item>
+                        <nz-form-control>
+                          <input nz-input  class="inputLarge" id="Descripcion" type="text" placeholder=" ZM_#1 " formControlName="descripcion" [disabled]="false" />
+                        </nz-form-control>
+                      </nz-form-item>
+                    </div>
+    
+  
+                </div>
+              </div>
+
+              
+            <div nz-row class="row-1">
+                <div nz-col  [nzSpan]="24" class="row1-col1">
+                    <label>Codigo</label>
+                    <div nz-row>
+                      <nz-form-item>
+                        <nz-form-control>
+                          <input nz-input  class="inputLarge" id="Descripcion" type="text" placeholder=" ZM_#1 " formControlName="descripcion" [disabled]="false" />
+                        </nz-form-control>
+                      </nz-form-item>
+                    </div>
+    
+  
+                </div>
+              </div>
+
+              
+            <div nz-row class="row-1">
+                <div nz-col  [nzSpan]="24" class="row1-col1">
+                    <label>Codigo</label>
+                    <div nz-row>
+                      <nz-form-item>
+                        <nz-form-control>
+                          <input nz-input  class="inputLarge" id="Descripcion" type="text" placeholder=" ZM_#1 " formControlName="descripcion" [disabled]="false" />
+                        </nz-form-control>
+                      </nz-form-item>
+                    </div>
+    
+  
+                </div>
+              </div>
+
+              
+            <div nz-row class="row-1">
+                <div nz-col  [nzSpan]="24" class="row1-col1">
+                    <label>Codigo</label>
+                    <div nz-row>
+                      <nz-form-item>
+                        <nz-form-control>
+                          <input nz-input  class="inputLarge" id="Descripcion" type="text" placeholder=" ZM_#1 " formControlName="descripcion" [disabled]="false" />
+                        </nz-form-control>
+                      </nz-form-item>
+                    </div>
+    
+  
+                </div>
+              </div>
+
+              <div nz-row class="row-1">
+                  <div nz-col  [nzSpan]="24" class="row1-col1">
+                      <label>Codigo</label>
+                      <div nz-row>
+                        <nz-form-item>
+                          <nz-form-control>
+                            <input nz-input  class="inputLarge" id="Descripcion" type="text" placeholder=" ZM_#1 " formControlName="descripcion" [disabled]="false" />
+                          </nz-form-control>
+                        </nz-form-item>
+                      </div>
+      
+    
+                  </div>
+                </div>
+                <div nz-row>
+
+                    <div nz-col nzSpan="24">
+
+                        <div class="clearfix">
+                          <nz-upload
+                            nzAction="https://www.mocky.io/v2/5cc8019d300000980a055e76"
+                            nzListType="picture-card"
+                            [(nzFileList)]="fileList"
+                            [nzShowButton]="fileList.length < 8"
+                          >
+                            <div>
+                              <i nz-icon nzType="plus"></i>
+                              <div style="margin-top: 8px">Upload</div>
+                            </div>
+                          </nz-upload>
+                          <nz-modal
+                            [nzVisible]="previewVisible"
+                            [nzContent]="modalContent"
+                            [nzFooter]="null"
+                            (nzOnCancel)="previewVisible = false"
+                          >
+                            <ng-template #modalContent>
+                              <img [src]="previewImage" [ngStyle]="{ width: '100%' }" />
+                            </ng-template>
+                          </nz-modal>
+                        </div>
+
+                    </div>
+
+                </div>
+              
+
+
+
+                <div nz-row class="row-3">
+              
+                    <div nz-col [nzSpan]="24" class="row3-col1">
+                    
+                        <label>Observacion</label>
+                        <div nz-row>
+                            <nz-form-item>
+                            <nz-form-control>
+                                <textarea class="inputLarge" formControlName="observacion" nz-input rows="2" placeholder=" Escriba algo respecto a la zona "></textarea>
+                            </nz-form-control>
+                            </nz-form-item>
+                    </div>
+  
+                </div>
+            </div>
+
+
+          </ng-container>
+        </nz-modal>
+
+    </div>
+
+    <div nz-col nzSpan="12" class="row1-col2">
+
+        <nz-input-group [nzSuffix]="suffixIconSearch">
+          <input type="text" nz-input placeholder="input search text" />
+        </nz-input-group>
+        <ng-template #suffixIconSearch>
+          <i nz-icon nzType="search"></i>
+        </ng-template>
+        
+    </div>
+</div>
+
+<div nz-row class="row-2">
+    
+    <div nz-col>
+    
+        <nz-card style="width:300px;" [nzCover]="coverTemplate" [nzActions]="[actionSetting, actionEdit, actionEllipsis]">
+            <nz-card-meta
+              nzTitle="Card title"
+              nzDescription="This is the description"
+              [nzAvatar]="avatarTemplate"
+            ></nz-card-meta>
+          </nz-card>
+          <ng-template #avatarTemplate>
+              <nz-avatar nzSrc="../../../../../assets/Images/Logo.jpg"></nz-avatar>
+          </ng-template>
+          <ng-template #coverTemplate>
+            <img alt="example" src="https://gw.alipayobjects.com/zos/rmsportal/JiqGstEfoWAOHiTxclqi.png" />
+          </ng-template>
+          <ng-template #actionSetting>
+            <i nz-icon nzType="setting"></i>
+          </ng-template>
+          <ng-template #actionEdit>
+            <i nz-icon nzType="edit"></i>
+          </ng-template>
+          <ng-template #actionEllipsis>
+            <i nz-icon nzType="ellipsis"></i>
+          </ng-template>    
+
+    </div>
+    
+</div>
