--- a/src/app/modules/menu-layout/components/zones/zones.component.html
+++ b/src/app/modules/menu-layout/components/zones/zones.component.html
@@ -1,1 +1,113 @@
-<p>zones works!</p>
+<h1>Zona</h1>
+<div nz-row class="row-1">
+
+    <div nz-col nzOffset="8" nzSpan="4" class="row1-col1">
+
+        <button nz-button [nzType]="'primary'" (click)="showModal()"><span>Nueva zona</span></button>
+        <nz-modal [(nzVisible)]="isVisible" nzTitle="Zonas" (nzOnCancel)="handleCancel()" (nzOnOk)="handleOk()">
+          <ng-container *nzModalContent>
+              
+              <div nz-row class="row-1">
+                <div nz-col  [nzSpan]="24" class="row1-col1">
+                    <label>Codigo</label>
+                    <div nz-row>
+                      <nz-form-item>
+                        <nz-form-control>
+                          <input nz-input  class="inputLarge" id="Descripcion" type="text" placeholder=" ZM_#1 " formControlName="descripcion" [disabled]="false" />
+                        </nz-form-control>
+                      </nz-form-item>
+                    </div>
+    
+
+                </div>
+              </div>
+              <div nz-row class="row-2">
+                
+                <div nz-col [nzSpan]="24" class="row3-col1">
+
+                    <label>Descripcion</label>
+                    <div nz-row>
+                      <nz-form-item>
+                        <nz-form-control>
+                          <input nz-input  class="inputLarge" id="Descripcion" type="text" placeholder=" Zona ## " formControlName="descripcion" [disabled]="false" />
+                        </nz-form-control>
+                      </nz-form-item>
+                    </div>
+    
+
+                </div>
+
+              </div>
+              <div nz-row class="row-3">
+                
+                <div nz-col [nzSpan]="24" class="row3-col1">
+                    
+                    <label>Observacion</label>
+                    <div nz-row>
+                        <nz-form-item>
+                          <nz-form-control>
+                            <textarea class="inputLarge" formControlName="observacion" nz-input rows="2" placeholder=" Escriba algo respecto a la zona "></textarea>
+                          </nz-form-control>
+                        </nz-form-item>
+                    </div>
+
+                </div>
+
+              </div>
+              
+
+          </ng-container>
+        </nz-modal>
+
+    </div>
+
+    <div nz-col nzSpan="12" class="row1-col2">
+
+        <nz-input-group [nzSuffix]="suffixIconSearch">
+          <input type="text" nz-input placeholder="input search text" />
+        </nz-input-group>
+        <ng-template #suffixIconSearch>
+          <i nz-icon nzType="search"></i>
+        </ng-template>
+        
+    </div>
+
+
+</div>
+<div nz-row class="row-2">
+  <div nz-col>
+      <nz-table #filterTable [nzData]="listOfData" nzTableLayout="fixed" [nzScroll]="{  x: '1150px', y: '385px' }"  [nzPageSize]="10">
+        <thead>
+          <tr>
+          <th nzLeft nzWidth="80px">ID</th>
+            <th
+              *ngFor="let column of listOfColumns"
+              [nzSortOrder]="column.sortOrder"
+              [nzSortFn]="column.sortFn"
+              [nzSortDirections]="column.sortDirections"
+              [nzFilterMultiple]="column.filterMultiple"
+              [nzFilters]="column.listOfFilter"
+              [nzFilterFn]="column.filterFn"
+              nzWidth="100px"
+            >
+              {{ column.name }}
+            </th>
+            <th nzRight nzWidth="80px">Acciones</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let data of filterTable.data">
+            <td nzLeft>{{ data.name }}</td>
+            <td>{{ data.age }}</td>
+            <td>{{ data.address }}</td>
+            <td>{{ data.address }}</td>
+            <td nzRight>
+              <button class="edit" nz-button nzType="primary"  nzShape="circle"><i nz-icon nzType="edit" nzTheme="outline"></i></button>
+              <button class="delete" nz-button nzType="primary"  nzShape="circle"><i nz-icon nzType="delete" nzTheme="outline"></i></button>
+            </td>
+          </tr>
+        </tbody>
+      </nz-table>
+      
+  </div>
+</div>
