--- a/src/app/modules/menu-layout/components/meters/meters.component.css
+++ b/src/app/modules/menu-layout/components/meters/meters.component.css
@@ -1,5 +1,7 @@
-.modal-col-2{
-    position: absolute;
-    margin: auto;
-    left: 70%;
+
+.inputLarge{
+    width: 475px;
+    display: table-cell; 
+    vertical-align: middle;
+    border: 1px solid #ccc;
 }
