--- a/src/app/modules/menu-layout/components/contracts/contracts.component.html
+++ b/src/app/modules/menu-layout/components/contracts/contracts.component.html
@@ -2,17 +2,7 @@
 <div nz-row class="row-1">
 
     <div nz-col nzOffset="8" nzSpan="4" class="row1-col1">
-
-        <button nz-button [nzType]="'primary'" (click)="showModal()"><span>Nueva Contrato</span></button>
-        <nz-modal [(nzVisible)]="isVisible" nzTitle="Zonas" (nzOnCancel)="handleCancel()" (nzOnOk)="PostRate()">
-          <ng-container *nzModalContent>
-
-            <form nz-form [formGroup]="validateForm" nzLayout="horizontal">
-              
-            </form>
-          </ng-container>
-        </nz-modal>
-
+      <app-modal-new-contract></app-modal-new-contract>
     </div>
 
     <div nz-col nzSpan="12" class="row1-col2">
@@ -61,7 +51,7 @@
             <td>{{ data.cliente }}</td>
             <td>{{ data.creacion }}</td>  
             <td nzRight>
-                <button class="view-medidores-btn" nz-button nzType="primary" >Medidores</button>
+                <app-modal-medidores></app-modal-medidores>
               </td>
           </tr>
         </tbody>
