--- a/src/app/modules/menu-layout/components/input-parameters/input-parameters.component.html
+++ b/src/app/modules/menu-layout/components/input-parameters/input-parameters.component.html
@@ -2,17 +2,7 @@
 <div nz-row class="row-1">
 
     <div nz-col nzOffset="8" nzSpan="4" class="row1-col1">
-
-        <button nz-button [nzType]="'primary'" (click)="showModal()"><span>Nueva Registro</span></button>
-        <nz-modal [(nzVisible)]="isVisible" nzTitle="Zonas" (nzOnCancel)="handleCancel()" (nzOnOk)="PostRate()">
-          <ng-container *nzModalContent>
-
-            <form nz-form [formGroup]="validateForm" nzLayout="horizontal">
-              
-            </form>
-          </ng-container>
-        </nz-modal>
-
+      <app-modal-new-parameter></app-modal-new-parameter>
     </div>
 
     <div nz-col nzSpan="12" class="row1-col2">
