--- a/src/app/modules/menu-layout/components/especial-charges/especial-charges.component.html
+++ b/src/app/modules/menu-layout/components/especial-charges/especial-charges.component.html
@@ -46,10 +46,10 @@
               <button class="delete" nz-button nzType="primary"  nzShape="circle"><i nz-icon nzType="delete" nzTheme="outline" (click)="DeleteRate(data.id)"></i></button>
             </td>
             <td>{{data.id}}</td>
-            <td>{{data.codigo}}</td>
-            <td>{{ data.descripcion }}</td>
+            <td>{{data.fechaInicio}}</td>
+            <td>{{ data.fechaFinal }}</td>
             <td nzRight>
-                {{ data.descripcion }}
+                {{ data.totalCargos }}
                 
             </td>
           </tr>
