--- a/src/app/modules/menu-layout/components/input-parameters/input-parameters.component.html
+++ b/src/app/modules/menu-layout/components/input-parameters/input-parameters.component.html
@@ -45,6 +45,7 @@
             <td nzLeft>{{data.id}}</td>
             <td>{{data.codigo}}</td>
             <td>{{data.cargo}}</td>
+            <td>{{data.valor}}</td>
             <td>{{ data.fechaInicio }}</td>
             <td>{{ data.fechaFinal }}</td>    
             <td nzRight>
